--- a/package.xml
+++ b/package.xml
@@ -56,6 +56,7 @@
   <build_depend>octomap</build_depend>
   <build_depend>octomap_msgs</build_depend>
   <build_depend>std_srvs</build_depend>
+  <build_depend>tf</build_depend>
     
   <run_depend>roscpp</run_depend>
   <run_depend>message_runtime</run_depend>
@@ -64,6 +65,7 @@
   <run_depend>octomap</run_depend>
   <run_depend>octomap_msgs</run_depend>
   <run_depend>std_srvs</run_depend>
+  <run_depend>tf</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
